UNTESTED: add ethernet aliases, alleged to help with mac
generation/detection.

See also: https://github.com/armbian/build/blob/master/patch/u-boot/u-boot-sunxi/0020-sunxi-call-fdt_fixup_ethernet-again-to-set-macaddr-f.patch
which falso claims fixes macs not being saved and shit for themon sunxi

--- a/arch/arm/dts/sun8i-h3-etactica-eg220proto.dts
+++ b/arch/arm/dts/sun8i-h3-etactica-eg220proto.dts
@@ -46,6 +46,10 @@
 	model = "eTactica EG220 prototype";
 	compatible = "etactica,eg220proto", "friendlyarm,nanopi-duo2",
 		"allwinner,sun8i-h3";
+
+	aliases {
+		ethernet0 = &emac;
+	}
 };
 
 /* None of the usb is actually broken out on this one... 
